# meshification

./: .gitignore  AsyncOperation.cpp  AsyncOperation.hpp  AsyncWorker.cpp  CMakeLists.txt  Consumer.cpp  Consumer.hpp  DepthFilter.cpp  DepthFilter.hpp  DepthMeshifier.cpp  DepthMeshifier.hpp  MeshBuilder.cpp  MeshBuilder.hpp  README.md  SourceKinect.cpp  SourceKinect.hpp  SourceOni.cpp  SourceOni.hpp  SourceRaw.cpp  SurfaceReconstruction.cpp  SurfaceReconstruction.hpp  Triangulator.cpp  Triangulator.hpp  VideoEncoder.cpp  main.cpp  triangle.cpp
acquisition/: AsyncWorker.cpp  AsyncWorker.hpp  CMakeLists.txt  Consumer.cpp  Consumer.hpp  DepthFilter.cpp  DepthMeshifier.cpp  DepthMeshifier.hpp  MeshBuilder.cpp  MeshBuilder.hpp  Source.hpp  SourceKinect.cpp  SourceKinect.hpp  SourceOni.hpp  SourceRaw.hpp  SourceVideo.cpp  SourceVideo.hpp  SourceWebcam.cpp  SourceWebcam.hpp  SurfaceReconstruction.cpp  SurfaceReconstruction.hpp  Triangulator.cpp  Triangulator.hpp  VideoEncoder.cpp  VideoEncoder.hpp  main.cpp  main_video.cpp  triangle.cpp
calibration/: CMakeLists.txt  calibration.cpp
cloudSimplifier/: CMakeLists.txt  Viewer.cpp  Viewer.hpp
common/: AsyncWorker.cpp  AsyncWorker.hpp  PacketID.hpp
faceTracker/: CMakeLists.txt  FaceTracker.cpp  FaceTracker.hpp  _main.cpp  main.cpp
receiver/: CMakeLists.txt  Data3d.hpp  Model.cpp  Model.hpp  ModelCubemappedPano.cpp  ModelCubemappedPano.hpp  ModelPano.cpp  ModelPano.hpp  ModelSphericalPano.cpp  ModelSphericalPano.hpp  Receiver.cpp  Receiver.hpp  StaticModel.cpp  StaticModel.hpp  xvr_receiver.cpp  xvr_receiver.h
test/: CMakeLists.txt  Viewer.cpp  Viewer.hpp  main.cpp
viewer/: CMakeLists.txt  Data3d.hpp  Model.cpp  Model.hpp  Receiver.cpp  Receiver.hpp  VideoDecoder.cpp  VideoDecoder.hpp  Viewer.cpp  Viewer.hpp
virtual_camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  Viewer.cpp  Viewer.hpp  main.cpp
