cmake_minimum_required(VERSION 2.8)
project(meshification)
add_definitions(-std=c++0x)

find_package(OpenCV REQUIRED)
find_package(PCL REQUIRED)
find_library(RAKNET_LIBRARY RakNetLibStatic)
find_library(VPX_LIBRARY vpx)
find_library(ARUCO_LIBRARY NAMES aruco aruco124 REQUIRED)
add_subdirectory(3dzip)
include_directories(${OpenCV_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${OPENNI_INCLUDE_DIRS})
add_subdirectory(acquisition)
#add_subdirectory(viewer)
#add_subdirectory(virtual_camera)
add_subdirectory(receiver)
add_subdirectory(test)
add_subdirectory(calibration)
