find_package(Qt4 COMPONENTS QtCore QtGui QtOpenGL QtXml)
include(${QT_USE_FILE})
find_package(PkgConfig)
if (PKG_CONFIG_FOUND)
    pkg_search_module(EIGEN REQUIRED eigen3 eigen2)
    include_directories(${EIGEN_INCLUDE_DIRS})
endif()
QT4_WRAP_CPP(VIEWER_CPP Viewer.hpp Receiver.hpp Model.hpp)
add_executable(viewer ${VIEWER_CPP} main.cpp Viewer.hpp Viewer.cpp Model.hpp Model.cpp Receiver.hpp Receiver.cpp VideoDecoder.hpp VideoDecoder.cpp ../virtual_camera/Camera.cpp)
target_link_libraries(viewer ${QT_LIBRARIES} qglviewer-qt4 GLEW 3dzip vpx ${PCL_LIBRARIES})
