find_package(Qt4 COMPONENTS QtCore QtGui QtOpenGL QtXml)
find_library(ASSIMP_LIBRARY assimp)
include(${QT_USE_FILE})
find_package(PkgConfig)
if (PKG_CONFIG_FOUND)
    pkg_search_module(EIGEN REQUIRED eigen3 eigen2)
    include_directories(${EIGEN_INCLUDE_DIRS})
endif()
QT4_WRAP_CPP(VIEWER_CPP Viewer.hpp)
add_executable(virtual_camera ${VIEWER_CPP} main.cpp Viewer.hpp Viewer.cpp Camera.hpp Camera.cpp)
target_link_libraries(virtual_camera ${QT_LIBRARIES} qglviewer-qt4 GLEW ${ASSIMP_LIBRARY})
